# robo-eye-sense

./: .gitignore  CHANGELOG.md  README.md  calibration.npz  docs_apriltag_tracking_head_motion.md  github_releases_packages.md  kalibracja_kamery.md  main.py  markery_wizyjne_nawigacja.md  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-gui.txt  requirements.txt  slam_marker_map.md  wyniki_testow.txt
Tag19h9/: 5cm.odt  5cm_id7-18.odt  AprilTagi.odt
modes/: __init__.py  follow_mode.py  live_mode.py  mediapipe_mode.py  pose_mode.py  yolo_mode.py
recorded_video/: output_video0.mkv  output_video2.mkv  output_video4.mkv
robo_eye_sense/: __init__.py  april_tag_detector.py  auto_scenario.py  camera.py  detector.py  gui.py  headless_guide.py  laser_detector.py  marker_map.py  offset_scenario.py  qr_detector.py  recorder.py  results.py  tracker.py
robo_vision/: __init__.py  _cv2_compat.py  april_tag_detector.py  auto_scenario.py  base_detector.py  camera.py  camera2.py  config.py  detector.py  gui.py  headless_guide.py  laser_detector.py  marker_map.py  offset_scenario.py  overlay.py  profiling.py  qr_detector.py  recorder.py  results.py  ros2_bridge.py  slam_view.py  tracker.py
tests/: conftest.py  test_april_tag_detector.py  test_auto_scenario.py  test_controller.py  test_detector.py  test_gui.py  test_headless_guide.py  test_laser_detector.py  test_live_modes.py  test_marker_map.py  test_modes.py  test_new_features.py  test_offset_scenario.py  test_qt_font_fix.py  test_recorder.py  test_results.py  test_tracker.py  test_verbose_output.py  test_version.py
